[package]
name = "lottery-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.1.6" }
rand = "0.8.5"
reqwest = { version = "0.11.11" }
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3.26" }
tokio = { version = "1.19.2", features = ["full"] }
